# openGL_raymarching_3dscene

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fragShader.glsl  glad.c  main.cpp  vertShader.glsl
common/: shader.cpp  shader.hpp
dependencies/include/glad/: glad.h
